feat: Add core structure to home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Springfield Shopper</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    
+    <nav><h1>Springfield Shopper</h1></nav>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
