--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets\css\style.css">
     <title>Springfield Shopper</title>
 </head>
+
 <body>
-    <nav><h1>Springfield Shopper</h1></nav>
+    <header>
+        <div>
+            <a href="index.html">
+                <img src="assets\images\Springfield_Shopper_yellow.webp" alt="Springfield Shopper Icon">
+            </a>
+        </div>
+        <nav>
+        </nav>
+    </header>
     <main>
         <section></section>
         <section></section>
@@ -15,4 +25,5 @@
     </main>
     <footer></footer>
 </body>
+
 </html>
